squashing migrations fixing columns desorder in main view

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -181,3 +181,11 @@
         display: none !important;
     }
 }
+
+.app-container{
+    height: 100vh;
+}
+
+.app-body{
+    height: 100%;
+}
